# programmes-2022

./: .gitignore  CNAME  README.md  conftest.py  index.html  manage.py  pyproject.toml  sitemap.txt
.github/workflows/: ci.yml
a-propos/: index.html
programmes/: admin.hy  admin.py  apps.py  callbacks.hy  index.html  models.py  urls.hy  views.hy
programmes/avec-vous/: index.html
programmes/changeons/: index.html
programmes/fixtures/: latest.json
programmes/hidalgo2022/: index.html
programmes/la-france-authentique/: index.html
programmes/la-france-des-jours-heureux/: index.html
programmes/lavenir-en-commun/: index.html
programmes/le-bon-sens-en-action/: index.html
programmes/le-camp-des-travailleurs/: index.html
programmes/le-courage-de-dire-et-la-volonte-de-faire/: index.html
programmes/le-courage-de-faire/: index.html
programmes/liberons-nous/: index.html
programmes/m-la-france/: index.html
programmes/migrations/: 0001_initial.py  0002_auto_20210914_2018.py  0003_auto_20210914_2035.py  0004_auto_20210914_2049.py  0005_alter_manifesto_candidate.py  0006_alter_candidate_photo.py  0007_auto_20210920_2018.py  0008_auto_20210920_2102.py  0009_alter_manifestoparagraph_manifesto_and_more.py  0010_politicalentity_photo_alter_candidate_photo.py  0011_candidate_is_active.py  0012_alter_candidate_options_alter_manifesto_options_and_more.py  0013_manifesto_logo.py  0014_alter_manifesto_logo.py  0014_manifesto_order_manifestoparagraph_order.py  0015_merge_20220312_0002.py
programmes/nouvelle-france/: index.html
programmes/pages/: home.hy
programmes/philippe-poutou-2022/: index.html
programmes/pour-que-la-france-reste-la-france/: index.html
programmes/static/: home.scss  style.css  style.scss
programmes/tests/: conftest.py  test_export.hy  test_views.hy  views.hy
programmes/util/: html.hy  (+1 more)
programmes_2022/: asgi.py  manage.py  settings.hy  settings.py  urls.hy  wsgi.py
scripts/: dev-env-setup.sh
thematiques/: index.html
util/: render.hy
(+61 files in other folders)
