[tool.poetry]
name = "programmes-2022"
version = "0.1.0"
description = "Programmes pour les élections présidentielles de 2022"
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
hyccup = "^1.0.0-alpha.3"
Pillow = "^8.3.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
