[tool.poetry]
name = "programmes-2022"
version = "0.1.0"
description = "Programmes pour les élections présidentielles de 2022"
authors = ["Guillaume Fayard <guillaume.fayard@pycolore.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Django = "^4.0"
hyccup = "^1.0.0-alpha.4"
Pillow = "^8.3.2"
gunicorn = "^20.1.0"
libsass = "^0.21.0"
beautifulsoup4 = "^4.10.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
pytest-django = "*"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "programmes_2022.settings"
python_files = ["**/test_*.hy", "**/test_*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
